<resources>
    <string name="app_name">Inventory</string>
    <string name="webserver" translatable="false">http://192.168.1.100/invent/</string>
    <string name="ip">000</string>
    <string name="firm">firm</string>
    <string name="mx">mx</string>
    <string name="name">name</string>
    <string name="scan">Scan</string>
    <string name="select">Select</string>
    <string name="save">Save</string>
    <string name="qty">qty</string>
    <string name="prodname">ProdName</string>
    <string name="cfc">cfc</string>
    <string name="items" translatable="false">items</string>
    <string name="ok">ok</string>
    <string name="no">no</string>
    <string name="action_settings">Settings</string>
    <string name="roles">inv</string>
</resources>
